...
        tableView?.register(cellType: RecentApplicationTableViewCell.self)
        tableView?.register(cellType: NoRecentApplicationTableViewCell.self)
        tableView?.register(cellType: FeaturesTableViewCell.self)
        tableView?.register(cellType: TodoEvaluationTableViewCell.self)
        tableView?.register(cellType: NoTodoEvaluationTableViewCell.self)

        tableView?.accessibilityIdentifier = "DashboardViewController-tableView"
    }

    private func setupViews() {
        title = LocalizedTable.home.localized
        navigationController?.setNavigationBarHidden(true, animated: false)

...
                                                               for: indexPath) as? NoTodoEvaluationTableViewCell else {
                    return UITableViewCell()
                }

                cell.setup(delegate: interactor)

                cell.accessibilityIdentifier = "DashboardViewController-NoTodoEvaluationTableViewCell"

                return cell
            } else {
                guard let cell = tableView.dequeueReusableCell(withIdentifier: TodoEvaluationTableViewCell.className,
                                                               for: indexPath) as? TodoEvaluationTableViewCell else {
                    return UITableViewCell()
...
